--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
-# No external dependencies required
-# The rowing timer application uses only Python standard library modules:
+# Core dependencies for the rowing timer application
+# Most functionality uses only Python standard library modules:
 # - tkinter (GUI framework, included with Python)
 # - json (data persistence)
 # - os (file operations)
 # - time (timing functionality)
 # - datetime (timestamps)
+# - csv (CSV export functionality)
 
-# If you want to enhance the application with additional features, you might consider:
+# Required for PDF export functionality:
+reportlab>=3.5.0     # PDF generation and formatting
+
+# Required for building executable:
+pyinstaller>=5.0.0   # Create standalone executable files
+
+# Optional enhancements you might consider:
 # matplotlib>=3.5.0  # For plotting time graphs
 # pandas>=1.3.0      # For advanced data analysis
 # openpyxl>=3.0.0    # For Excel export functionality
